[project]
name = "comfyui-common-util"
description = "A collection of common tools for comfyui"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/longgui0318/comfyui-common-util"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "longgui0318"
DisplayName = "comfyui-common-util"
Icon = ""
